## Process this file with automake to produce Makefile.in

tmfsincludedir=$(includedir)/tmfs

tmfsinclude_HEADERS = \
	tmfs.h			\
	tmfs_compat.h		\
	tmfs_common.h		\
	tmfs_common_compat.h    \
	tmfs_lowlevel.h		\
	tmfs_lowlevel_compat.h	\
	tmfs_opt.h		\
	tmcd_lowlevel.h

include_HEADERS = old/tmfs.h ulockmgr.h

noinst_HEADERS = tmfs_kernel.h
